--- a/html/053. Last Part (28-06-2024)/last.html
+++ b/html/053. Last Part (28-06-2024)/last.html
@@ -81,6 +81,232 @@
                 So what? Don't wasting your time girl! Ayo kita pulang, 
                 sayang!
             </p>
+            <p>
+                ....
+            </p>
+            <p>
+                21.47
+            </p>
+            <p>
+                Kalo yang di bilang Deni Sumargo bener, yang bahwa "Setiap 
+                cowok pernah kehilangan satu cewek karena pengecut." Gimana?
+                Hmmm, ya so what? Enjoy your loss, bruh.
+            </p>
+            <p>
+                Tapi ya, ngomong-ngomong, kalo aku jadi cowok, aku akan suka 
+                si Iz*a sih, secara dia emang manis. Dan aku juga akan suka 
+                Mon*, suka aja liat apple cheeksnya kalo lagi senyum. Aku 
+                juga akan tertarik sama Risk* Safitr*, yang gemuk-gemuk lucu 
+                wkwkwk. Aku juga akan suka Isn*ini yang anaknya humble, dan 
+                suka becanda, pasti rame dan seru terus. 
+            </p>
+            <p>
+                Walapun begitu, kalo aku jadi cowok dan aku dekat sama si 
+                Nisa, aku bakalan jauh lebih suka dia. Si Nisa yang mana tu? 
+                Ya dirikuu lah, siapa lagi, hahaha. Maapkeuun aku yang terlalu 
+                self love ini, hmmm.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Btw, aku udah di rumah nih. Tadi aku mampir bentar di rumah 
+                sakit, terus langsung pulang sama bang Jabar. Yang tinggal 
+                di rumah sakit ada abangku satu lagi, kak Masyit*ah sama kak 
+                Ni. Jadii, aku pulang aja, dirumah kawanin mamiku. Soalnya 
+                kak Nah sama dek Fata udah pulang ke rumahnya yang di Geudong 
+                beberapa hari lalu. Jadi, aku berdua sama mamiku deh di rumah.
+            </p>
+            <p>
+                Ini aku lagi nonton tv, sambil ngetik, sambil denger lagu 
+                juga, hahaha.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Btw, aku mau cerita deh, tadi kan aku udah beres distribusi 
+                sama Pak Fikr*, ya jadi semua targetku untuk jumpai dosen 
+                udah terpenuhi. Yaa aku tinggal nunggu buku ku sampe, terus 
+                ke perpus-perpus dan beress.
+            </p>
+            <p>
+                Btw, aku seneng deh sama dosen-dosenku, pak Haf*zh, pak Nu*din,
+                sama pak Fik*y ngesave nomerku loh, wkwkwk. Yaa walapun buk 
+                Za*a begitu, tapi aku cukup bersyukur dengan dosen-dosenku 
+                yang lain, orangnya superr baik.
+            </p>
+            <p>
+                Pak Haf*zh, setiap bimbingan selalu ontime. Janjian jam 10.00, 
+                tepat jam segitu bapaknya udah siap untuk bimbingan. Janjian 
+                jam 14.00, juga gitu. Setiap di chat selalu fast, dan bimbingannya 
+                juga ngga bikin degdegan. Sampe diajak deeptalk, beliau pernah 
+                nanya sama aku, bedanya halal haram dalam hal riba. Ya dari 
+                akadnya pak. Terus beliau juga ngejabarin, "Ya memang sesederhana 
+                akad itu. Misalkan saya suka sama perempuan terus saya dekati dia 
+                gitu, hukumnya gimana 'haram', tapi kalo saya ketemu ayahnya terus 
+                akad, hukumnya jadi 'halal' buat saya." Aku speechless dengernya, 
+                ohh gitu ya pak, hahaha.
+            </p>
+            <p>
+                Pak Nur*In itu seperti dosen-dosen baik pada umumnya, dan jarang 
+                ngobrol sih sama aku, karena aku ngga ada 'bimbingan' sama beliau.
+                Tapi ya, thankyou so much Pak Dr Nur*in atas kebaikannya menjadi 
+                penguji akuu.
+            </p>
+            <p>
+                Pak Fik*y paling memorable, wkwkwk. Beliau ini inget aku dan namaku, 
+                sama penelitiaku juga. Yahh karena beliau emang dosen yang tipe-tipe 
+                ambis kayaknya, mementingkan dan melihat detail penelitian mahasiswa 
+                banget. Kayak tipe-tipe pak S*id, waktu jadi penguji KP ku dulu. 
+                Aku suka dosen-dosen begitu, jadi kayak ngerasa diperhatikan banget 
+                sebagai mahasiswa, daripada dosen yang cuman ngecek sekilas doang. 
+                Makanya pas milih dosen pembimbing, salah satu dari 5 itu ya aku 
+                milih pak Sa*d, wkwkwk. Cuman ya belum rejeki aja ketemu beliau.
+            </p>
+            <p>
+                Lanjut, pas pak Fik*y ini, waktu semhas aku sempat adu argumen 
+                panjangggg banget pas jelasin timeseriessplit() abisnya bapaknya 
+                ngga ngerti-ngerti, akunya juga bingung mau jelasin pake cara 
+                apalagi, sampe udah lama banget ngejelasin bagian itu doang 
+                buk Zar* akhirnya ngasih aku spidol, terus aku nulis di papan, 
+                akhirnya baru kelar deh, setelah tanya jawab panjang selama 40 
+                menitan sama pak Fikr* doang wkwkwkw.
+            </p>
+            <p>
+                Pas mau ngasih undangan sidang, aku dikabarin kalo beliau itu 
+                ada di kampus siang, jam 11-an. Jadi, aku nunggu lah di kampus 
+                kan. Udah capek nunggu, udah mau jam 1 bapaknya ngga dateng-dateng,
+                akhirnya aku wa lagi. Terus aku tunggu bentar ngga dibalas, akhirnya 
+                aku pulang aja deh. Udah setengah jalan, aku ngecek hp, rupanya 
+                dibalas, dan beliau bilang "Jam brp ?", "Kalo sekarang bisa?"
+                So what pak, saya sudah menunggu anda selama 2 jam, lalu anda 
+                nanya jam berapa? Aku jawab, "Di jurusan ya pak? Bisa pak"
+            </p>
+            <p>
+                Akhirnya ya aku putar balik. Sampe kampus, beliau lagi duduk 
+                di depan gedung di samping kiri taman, lagi bimbingan sama 
+                anak bimbingannya. Aku tunggu bentar dan aku kasih, terus beliau 
+                bilang ngga bisa jam 9, dan udah kasih tau buk Zar*, jadi 
+                kemungkinan jam 11-an baru bisa. Disitu ada beberapa orang, 
+                anak bimbingan, sama anak 21 juga, ada si Chris yang aku kenal.
+            </p>
+            <p>
+                Terus aku udah ngasih skripsi sama undangan itu aku pulang kan. 
+                Akunya balik badan jalan pulang. Pas akunya agak jauh, bapaknya 
+                bilang ke Chris, "Chris tolong tarok di meja saya ya." Rasanya 
+                pengen balik dan ngomong ke bapaknya, "Woi pak, kalo cuman buat 
+                tarok di meja, mending bilang aja sama saya biar langsung saya 
+                tarok dari tadi, dan ngga usah nunggu anda 2 jam di kampus, terus
+                harus bolak balik lagiii." Kalo bapaknya mau bilang ngga bisa 
+                jam 9 kan tinggal wa pak, hp diciptakan untuk mempermudah hidup 
+                kita lohh pak.
+            </p>
+            <p>
+                Nunggu sidang, aku lagi duduk sama syah*ani di depan ruang 
+                sidang, beliau lewat dan dengan santainya nanya sama aku, 
+                "Udah siap sidangnya?" Aku jawab, "Belum pak." Terus beliau 
+                lewat, aku lanjut (orangnya ngga dengar), "Ya belum pak, 
+                saya kan nunggu bapak." Hmmm. Syahr*ani yang denger, dia 
+                sampe ketawa, wkwkwkw.
+            </p>
+            <p>
+                Pas sidang, aku seneng sih, bapaknya nawarin S2, terus bilang 
+                juga sama aku, "Kami (maksudnya sama pak Nur*in) nawarin s2 
+                bukan ke sembarang orang loh, kami liat kamu punya potensi."
+                Terus beliau bilang, penelitianku bagus dan menarik, aku pintar 
+                akademik, dan sayang aja kalo ngga lanjut, terus sampe nanya 
+                IPku, terus bilang juga coba tanyakan ke keluarga dulu masalah 
+                lanjut s2 ini. Wkwkwk.  
+            </p>
+            <p>
+                Yahh pak, saya juga tau misi anda bersama pak Nur*in kan untuk 
+                promosi magister TI unimal karena anda juga dosen kan. Hahaha. 
+            </p>
+            <p>
+                Terus tadi pagi, aku hubungi beliau jam 09.58 untuk distribusi. 
+                Beliau balas jam 10.16, isinya "Boleh, udah dikampus ?" Haduh 
+                mana aku baru selesai mandi, belum pake lotion, belum pake 
+                pelembab wajah, pake sunscreen, pake bedak, pake baju rapi, 
+                pake jilbab + cadar lagi, belum keluarin motor dari parkiran 
+                depan bilek. Tapi, demi S.kom, aku langsung balas "Baik pak, 
+                saya ke kampus sekarang." Itu di jam 10.17.
+            </p>
+            <p>
+                Aku langsung siap-siap, 5 menit kelar, keluarin motor, otw 
+                kampus. Sampe kampus jam 10.32. Aku ke adm, cari-cari si 
+                bapak mana, ngga ada. Jam 10.33, bapaknya wa "Klo ke kampus 
+                skrg saya di LPPM ya." Hadeuuh pak, anda benar-benar menguji 
+                kesabaran saya, baiklah aku balas "Baik pak" dan langsung 
+                otw ke LPPM.
+            </p>
+            <P>
+                Sampe LPPM aku ngga liat jam, karena aku udah langsung liat 
+                bapaknya di motor pas parkiran pas depan LPPM nya. Aku 
+                markirin motor, siap-siap keluarin skripsi sama kertas 
+                ceklistnya dan pulpen juga, aku mau langsung ngasih skripsinya, 
+                bapaknya tanda tangan dan aku pulang. Selesai.
+            </P>
+            <p>
+                Tapi sampe sana, aku udah berdiri di samping bapaknya, terus 
+                bilang, "Pak, saya mau distribusi." Bapaknya lagi ngerokok 
+                sambil liat hp, kayak hal penting gitu. Bapaknya bilang, 
+                "Bentar ya." Aku jawab, "Iya pak." Aku berdiri lah disitu, 
+                sekitar 5 menit, mematung. Dalam hati meronta-ronta, "Pak 
+                mending anda ttd dulu punya saya ini, cuma bentar kok pak,
+                ttd doang."
+            </p>
+            <p>
+                Tapi ngga berenti disitu, dia telpon. Aku denger, kayak bahas 
+                MSE, MAPE, R2, MAE, pokoknya kayak mahasiswa bimbingan gitu 
+                lah. Emang ada ya, dosen yang segitunya sampe nelpon mahasiswa? 
+                Baik banget dong, tau gitu beliau jadi pembimbing aja biar aku 
+                ngga pusing, wkwkwk.
+            </p>
+            <p>
+                Setelah nelpon yang juga agak lama itu, beliau ngomong ke aku, 
+                "Kita masuk ke dalam aja yok." Aku bilang, "Iya pak." Dalam 
+                hatiku, 'Hadeuh perkara lagi ini, ngga ada habis-habisnya ya 
+                urusan sama dosen penguji satu ini, tinggal ttd doang, disini 
+                juga bisa loh pak.'
+            </p>
+            <p>
+                Terus ngikut jalan ke ruangannya, aku udah pernah kesana jadi ya 
+                udah hafal. Aku duduk di bangku depan dia, udah duduk, terus 
+                langsung tarok skripsi sama lembar ceklist di meja bapak, tiba-tiba 
+                bapaknya keluar ruangan, bilang "Bentar ya," "Iya pak." Sambil 
+                duduk aku bales chat-chat temen sama kating yang nanya masalah 
+                seminar gitu (agak banyak yang sering chat aku belakangan ini, 
+                dan aku seneng banget balesnya, sekalian bantu orang yekann).
+            </p>
+            <p>
+                Terus bapaknya masuk, dalam hatiku 'aakhirnyaaa' hahaha. Dia 
+                ambil skripsiku terus ttd-in ceklist. Terus nanya, "Gimana 
+                mengenai s2?" Niat juga ya bapak ini promosi s2 ke aku wkwkwk. 
+                Aku jawablah, "Mungkin saya mau kerja dulu pak." Terus bapaknya 
+                jawab, "Udah tanya ke keluarga?" Aku mikir, ayahku aja sakit 
+                gimana mau nanya, tapi agar cepat selesai aku bilang aja "Udah 
+                pak."
+            </p>
+            <p>
+                Terus bapaknya buka skripsi sambil nanya lagi sambil nunjukin 
+                lembar pengesahan, "Ini halaman pengesahannya udah kamu scan?" 
+                Haduuh aku belum siapin lagii, jadi bapak ini minta softcopy 
+                skripsi, maunya aku siapin sebelum berangkat ke kampus tapi 
+                bapaknya tau-tau udah di kampus dan balas 'sekarang' jadi 
+                belum aku scan dan siapin. Aku jawab aja jujur wkwkwk, "Belum 
+                pak," bapaknya bilang "Ini ngga mau kamu scan dulu" posisi 
+                bapaknya megang hp sama ngebuka halaman pengesahan. Haduh 
+                biar ngga ribet, aku jawab aja, "Ohh iya pak, ngga papa pak 
+                nanti saya scan masih ada pertinggalnya di saya. Nanti segera 
+                saya kirim ya pak softcopynya." Terus aku langsung pamit pulang 
+                deh.
+            </p>
+            <p>
+                Panjang juga ya aku ngetik, apakah aku berbakat cerita da menjadi 
+                seorang penulis novel? Hmmm, besok kalo lagi gabut aku coba cerita 
+                panjang lagi deh yaa. Wkwkwk.
+            </p>
         </div>
     </div>
 </body>
