--- a/html/053. Last Part (28-06-2024)/last.html
+++ b/html/053. Last Part (28-06-2024)/last.html
@@ -156,7 +156,7 @@
             </p>
             <p>
                 Pak Fik*y paling memorable, wkwkwk. Beliau ini inget aku dan namaku, 
-                sama penelitiaku juga. Yahh karena beliau emang dosen yang tipe-tipe 
+                sama penelitianku juga. Yahh karena beliau emang dosen yang tipe-tipe 
                 ambis kayaknya, mementingkan dan melihat detail penelitian mahasiswa 
                 banget. Kayak tipe-tipe pak S*id, waktu jadi penguji KP ku dulu. 
                 Aku suka dosen-dosen begitu, jadi kayak ngerasa diperhatikan banget 
@@ -303,7 +303,7 @@
                 deh.
             </p>
             <p>
-                Panjang juga ya aku ngetik, apakah aku berbakat cerita da menjadi 
+                Panjang juga ya aku ngetik, apakah aku berbakat cerita dan menjadi 
                 seorang penulis novel? Hmmm, besok kalo lagi gabut aku coba cerita 
                 panjang lagi deh yaa. Wkwkwk.
             </p>
