--- a/html/054. S2 (29-06-2024)/s2.html
+++ b/html/054. S2 (29-06-2024)/s2.html
@@ -39,8 +39,7 @@
                 manfaatin kesempatan emas buat nanya-nanya sama S3 Jepang, 
                 rugi juga ya. Tapi aku keburu ngga nyaman, masak di LPPM 
                 itu kayak ngga ada orang loh, disuruh ke ruangan cuman sama 
-                beliau aja, berdua di ruangan rasanya takut pengen cepat-cepat 
-                keluar, wkwkwk.
+                beliau aja, rasanya takut pengen cepat-cepat keluar, wkwkwk.
             </p>
         </div>
     </div>
