--- a/html/054. S2 (29-06-2024)/s2.html
+++ b/html/054. S2 (29-06-2024)/s2.html
@@ -41,6 +41,31 @@
                 itu kayak ngga ada orang loh, disuruh ke ruangan cuman sama 
                 beliau aja, rasanya takut pengen cepat-cepat keluar, wkwkwk.
             </p>
+            <p>
+                ....
+            </p>
+            <p>
+                LPDP udah buka dari 19 Juni kemaren. Cuman sampe sekarang 
+                SKL ku belum siap. Lebih tepatnya sih belum ku tanyain 
+                sama Pak Fir*aus. Buku ku udah mau dianter ke dayah,
+                barusan kurirnya nelpon, kemungkinan akan diantar dan 
+                sampai ke dayah besok, aku udah nitip uang pembayaran
+                CODnya sama kawan bilek. Berarti, aku udah bisa distribusi 
+                ke perpus hari senin lusa. Kemungkinan senin aku akan ke 
+                Lhok sih buat jaga ayah, jadi sekalian aku bisa ke kampus
+                dan dekat juga kan ke kampus dari sana.
+            </p>
+            <p>
+                Oke, insya Allah senin aku ke kampus, beresin distribusi, 
+                sekalian nanya-nanya juga sama pak Fir mengenai SKL.
+            </p>
+            <p>
+                Btw, aku dapet projek ngebuat web untuk skripsi kawankuu. 
+                Cuman belum aku mulai buat, mager sih, wkwkwk. Tapii, aku 
+                ngga boleh mager, uangnya bisa aku pake buat ngikut test 
+                dan dapetin sertivikat Toefl atau ILTS, LPDP abroad kan 
+                salah satu syaratnya ya ituu.
+            </p>
         </div>
     </div>
 </body>
