--- a/html/054. S2 (29-06-2024)/s2.html
+++ b/html/054. S2 (29-06-2024)/s2.html
@@ -66,6 +66,18 @@
                 dan dapetin sertivikat Toefl atau ILTS, LPDP abroad kan 
                 salah satu syaratnya ya ituu.
             </p>
+            <p>
+                ....
+            </p>
+            <p>
+                Gimana caranya ya aku bisa dapat LOA dari kampus luar. Ini 
+                sih yang paling bikin bingung. Aku harus banyak-banyak cari 
+                info lagi deh, atau aku tanya dosenku S3 Jepang bisa ngga yah.
+                Ngga berani ah, cari info sendiri aja.
+            </p>
+            <p>
+                Aku mau buat akun LPDP nya dulu deh. Gasskeuunn nisaa!
+            </p>
         </div>
     </div>
 </body>
