--- a/html/054. S2 (29-06-2024)/s2.html
+++ b/html/054. S2 (29-06-2024)/s2.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="s2.mp4" autoplay controls loop></video>
+            <video src="first-step.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>s2</h1>
