--- a/html/055. PULANG (30-06-2024)/P.html
+++ b/html/055. PULANG (30-06-2024)/P.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="keep-shining.mp4" autoplay controls loop></video>
+            <video src="plggg.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Pulang</h1>
