--- a/html/056. Terobos ajaa (01-07-2024)/terobos.html
+++ b/html/056. Terobos ajaa (01-07-2024)/terobos.html
@@ -37,6 +37,16 @@
                 waktu pagi. Pergunakanlah masa sehatmu untuk menghadapi 
                 masa sakitmu, dan masa hidupmu untuk menghadapi kematianmu."
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Stress sih rasanya untuk memulai ngoding lagi, wkwkwk. Secara 
+                aku udah lama banget ngga ngoding, terakhir yang beneran 
+                ngoding banget kan desember-awal januari. Huhh, gimana ya 
+                cara membangun mental programmer terus-terusan. Huuaaa, help 
+                me, aku ngga bisa ngoding lagiii!
+            </p>
         </div>
     </div>
 </body>
