--- a/html/056. Terobos ajaa (01-07-2024)/terobos.html
+++ b/html/056. Terobos ajaa (01-07-2024)/terobos.html
@@ -47,6 +47,12 @@
                 cara membangun mental programmer terus-terusan. Huuaaa, help 
                 me, aku ngga bisa ngoding lagiii!
             </p>
+            <p>
+                June ku dipenuhi screenshot aja dah. Foto-foto udah aku pindahin 
+                ke laptop, foto-foto sidang juga tinggal itu doang di hp. Lagian 
+                aku heran, kenapa aku tiap liat qoutes menarik dikit langsung ss, 
+                terus lama-lama jadi numpuk dan ngga kepake di galeri. Hmmm.
+            </p>
         </div>
     </div>
 </body>
