--- a/html/057. Website (03-07-2024)/website.html
+++ b/html/057. Website (03-07-2024)/website.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="wbbs.mp4" autoplay controls loop></video>
+            <video src="i-gues-so.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Website!</h1>
@@ -40,9 +40,18 @@
                 mendesain webnya, dan kita bikin aesthetic.
             </p>
             <p>
-                Oke, target hari ini harus bares front-end, database, dan 
+                Oke, target hari ini harus beres front-end, database, dan 
                 harus udah bisa inputin datanya juga. Perhitungan dan metodenya 
                 besok-besok aja.
+            </p>
+            <p>
+                ....
+            </p>
+            <p>
+                Ternyata susah juga untuk ketawa. Kenapa ya aku ngga jago buat 
+                fake smile, wkwkwk. Btw, aku udah ngga punya apk tiktok lagi 
+                di hp, ini video kemaren-kemaren. Ahhh aku harus lanjut ngoding 
+                lagi deh sekarang.
             </p>
         </div>
     </div>
