--- a/html/058. Kenapaa (04-07-2024)/kenapaa.html
+++ b/html/058. Kenapaa (04-07-2024)/kenapaa.html
@@ -32,6 +32,32 @@
                 gimana inii, tolonglah. Apa gara-gara function exit() itu 
                 ya? Aku coba deh.
             </p>
+            <p>
+                Ahhh, kirain salah session, ternyata bukann. Aku malah ngga 
+                tau salahnya dimanaa, php ngeseliinnn!
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Btw, aku sedikit heran, kenapa orang-orang pada update story 
+                tentang acara Ruang Gu*u yang lomba-lomba itu. Insecure lah, 
+                apa lah. Ya aku udah nonton, keren sih, dibagian ingat-ingat 
+                kartunya tuh, yang bisa inget sampe 46 kartu, tapii sisanya 
+                ya kayak perhitungan gitu doang ngga sih, yang paling siap 
+                mental dan punya problem solving yang bagus pasti bisa nyelesain,
+                dengan waktu yang cukup lama juga.
+            </p>
+            <p>
+                Walaupun aku mungkin ngga bisa secepat mereka, tapii ya jujur 
+                aku ngga keimpres-impres banget. Aku lebih ngerasa, kerenan 
+                anak-anak hafizh ngga sih, kayak hafalan mereka tuh jauh 
+                lebih banyak dan mereka masih kecil-kecil. Hei, they're 
+                more amazing!
+            </p>
+            <p>
+                Akuu lanjut ngoding dulu deh.
+            </p>
         </div>
     </div>
 </body>
