--- a/html/059. Perfect (05-07-2024)/perfect.html
+++ b/html/059. Perfect (05-07-2024)/perfect.html
@@ -66,6 +66,38 @@
             <p>
                 Unimal udah aku taklukkan, mari cari hal lain yang lebih menantang!
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Aku kan mau minta izin panjang. Kemaren rencananya sama orang Kak Ti*ul 
+                dkk, tapii mendadak aku dikabari kalo ayahku sakit, jadinya ya aku 
+                lebih memilih untuk pulang, hmmm. 
+            </p>
+            <p>
+                Dan sekarang aku lebih bingung, gimana cara ngasih kadonyaa. Apa aku 
+                pake cara kak Rahm*na aja? Aku wa Tgk? Tapii aku takut ntar salah ngomong 
+                pas wa dan di ghibahin bertahun-tahun sama Tgk kami, hmmm.
+            </p>
+            <p>
+                Aku udah ngerangkai kata-katanya sih, apa aku langsung kirim aja? Btw, 
+                kadoku udah aku titip ke Saf*i, nanti pas ngaji dia yang ngasih gituu.
+            </p>
+            <p>
+                Duhh takut banget, semoga endingnya ngga memalukan hmmm. Tolong kepada 
+                gure, kalo anda tidak senang dengan saya, mohon jangan gibahin sayaa 
+                plisss. Duhh gimana ya, dek dekan banget. Apa aku ke Tgk Jul*n dulu
+                terus liat responnya dan baru ke Tgk Anw*r? 
+            </p>
+            <p>
+                Arhhgggg, teruntuk guree saya tau mungkin saya aneh, tapii jangan 
+                gibahin sayaa plisss:(
+            </p>
+            <p>
+                Ahhh bodoamat lah, mau digibahin mau engga, toh aku juga ngga tauu. 
+                Ahhh tapi kalo beneran digibahin ngga enak dong, aku akan kepikiran,
+                ahhh kirim aja lah ke Tgk Jul*n dulu. Bismillah.
+            </p>
         </div>
     </div>
 </body>
