--- a/html/059. Perfect (05-07-2024)/perfect.html
+++ b/html/059. Perfect (05-07-2024)/perfect.html
@@ -98,6 +98,9 @@
                 Ahhh tapi kalo beneran digibahin ngga enak dong, aku akan kepikiran,
                 ahhh kirim aja lah ke Tgk Jul*n dulu. Bismillah.
             </p>
+            <p>
+                Udah akuu kirim, matiin data aja deh ya, takuutt. 
+            </p>
         </div>
     </div>
 </body>
