--- a/html/061.  Skripsi Orang (07-07-2024)/so.html
+++ b/html/061.  Skripsi Orang (07-07-2024)/so.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="al_.mp4" autoplay controls loop></video>
+            <video src="so.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Skripsi?</h1>
@@ -59,6 +59,14 @@
             </p>
             <p>
                 Ahhhh, aku harus selesain projek 02 ini malam ini deh. Bismillah.
+            </p>
+            <p>
+                Tapi projeknya Ar* aneh sih, Klasifikasi Burung Pake KNN sama PCA. 
+                Lah, PCA bukannya buat clustering ya? Apa emang bisa juga buat 
+                klasifikasi? Tapi kenapa burung sih, wkwkwkwk. Mungkin dia suka 
+                burung hahaha. Sama kayak aku, kan aku suka uang makanya aku 
+                ambil saham (mata duitan amat ye), lebih tepatnya sih suka nabung
+                dan biar bisa nabung saham yekann.
             </p>
         </div>
     </div>
