--- a/html/061.  Skripsi Orang (07-07-2024)/so.html
+++ b/html/061.  Skripsi Orang (07-07-2024)/so.html
@@ -68,6 +68,12 @@
                 ambil saham (mata duitan amat ye), lebih tepatnya sih suka nabung
                 dan biar bisa nabung saham yekann.
             </p>
+            <p>
+                Udah mau jam 8, tapii aku kayaknya males ngga sih. Aku maunya 
+                sama temen cewek aja gituu. Biar enak juga komunikasinya. Tapii 
+                kalo aku tolak sayang banget dong, orang aku udah punya templates 
+                untuk appnya. 
+            </p>
         </div>
     </div>
 </body>
