--- a/html/061.  Skripsi Orang (07-07-2024)/so.html
+++ b/html/061.  Skripsi Orang (07-07-2024)/so.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="so.mp4" autoplay controls loop></video>
+            <video src="2024-01-12-221114762.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Skripsi?</h1>
