--- a/html/061.  Skripsi Orang (07-07-2024)/so.html
+++ b/html/061.  Skripsi Orang (07-07-2024)/so.html
@@ -74,6 +74,22 @@
                 kalo aku tolak sayang banget dong, orang aku udah punya templates 
                 untuk appnya. 
             </p>
+            <p>
+                ....
+            </p>
+            <p>
+                Ahhh kagak bisa! Masak datanya juga dari aku sih. Dan masak 
+                aku diminta cari data burung? Dapat darimana data burung begitu 
+                hmmm. Mana nama burungnya aneh, nih ya, begini.
+                1. Burung Cekakak Suci
+                2. Burung Kuntul Kecil 
+                3. Burung Kutilang
+                4. Burung Cabai Bunga Api 
+            </p>
+            <p>
+                Burung-burung apa ini woi, wkwkwkw. Apa aku tolak aja ya? Aku 
+                bilang aja ngga ada gambar burungnya.
+            </p>
         </div>
     </div>
 </body>
