--- a/html/061.  Skripsi Orang (07-07-2024)/so.html
+++ b/html/061.  Skripsi Orang (07-07-2024)/so.html
@@ -90,6 +90,11 @@
                 Burung-burung apa ini woi, wkwkwkw. Apa aku tolak aja ya? Aku 
                 bilang aja ngga ada gambar burungnya.
             </p>
+            <p>
+                Kenapa ngga ambil burung simple aja sih, kayak burung dara, burung 
+                pipit, burung jalak, dimana coba aku bisa menemukan data burung 
+                begituan.
+            </p>
         </div>
     </div>
 </body>
