--- a/html/061.  Skripsi Orang (07-07-2024)/so.html
+++ b/html/061.  Skripsi Orang (07-07-2024)/so.html
@@ -95,6 +95,15 @@
                 pipit, burung jalak, dimana coba aku bisa menemukan data burung 
                 begituan.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Hmmmm, ternyata di google ada tuh burung-burung. Tapi aku ngga mau 
+                1,7 kalo harus aku yang cari data, kan capek ngumpulin data burung. 
+                Coba aku bilang 2,3 JT yaa, kalo dia mau ya lanjut, kalo engga mau 
+                ya engga jadi, yekann.
+            </p>
         </div>
     </div>
 </body>
