--- a/html/061.  Skripsi Orang (07-07-2024)/so.html
+++ b/html/061.  Skripsi Orang (07-07-2024)/so.html
@@ -104,6 +104,11 @@
                 Coba aku bilang 2,3 JT yaa, kalo dia mau ya lanjut, kalo engga mau 
                 ya engga jadi, yekann.
             </p>
+            <p>
+                Katanya sama penulisan bab 4 nya kan? Hah, sama dengan aku dong 
+                yang buat skripsinya? Emang bisa skripsi teknik 2,3 jutaan? Dikit 
+                amat ngga sih? Aku mau jawab apa hei?
+            </p>
         </div>
     </div>
 </body>
