--- a/html/061.  Skripsi Orang (07-07-2024)/so.html
+++ b/html/061.  Skripsi Orang (07-07-2024)/so.html
@@ -109,6 +109,16 @@
                 yang buat skripsinya? Emang bisa skripsi teknik 2,3 jutaan? Dikit 
                 amat ngga sih? Aku mau jawab apa hei?
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Sebenernya buat bab 4 ngga ribet-ribet amat sih. Cuman malesin 
+                aja, buat diagram, pengujian, kalo perhitungan mah ngga usah 
+                karena gambar. Aku bilang aja 3jt, entah dia mau atau engga, 
+                mungkin lebih baik engga jadi aja sih hahaha. Kita liat aja 
+                dia balas apa nantinya.
+            </p>
         </div>
     </div>
 </body>
