--- a/html/62. Help (08-07-2024)/help.html
+++ b/html/62. Help (08-07-2024)/help.html
@@ -63,6 +63,14 @@
             <p>
                 AKU PENGEN, DAN AKU HARUS DAPATKAN!
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Btw, Zancok hari ini sidang. Baiklah, congrats untuk Zancok 
+                karena anda telah berhasil dan telah sah saya kalahkan, hahaha. 
+                Ya kan karena akuu sidang duluan, wkwkwk.
+            </p>
         </div>
     </div>
 </body>
