--- a/html/063. Ngoding (09-07-2024)/ngoding.html
+++ b/html/063. Ngoding (09-07-2024)/ngoding.html
@@ -9,8 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <!-- ini videonya burem amat -->
-            <video src="ngd.mp4" autoplay controls loop></video>
+            <video src="apr.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Ngoding?</h1>
@@ -40,6 +39,28 @@
                 Atau nanti aku post dia deh di ig. Kayak congrats gituu. 
                 Ahh ngga enak banget sama dia, mana orangnya suupeerr baik 
                 banget lagi. Ahhh maaf yaa Dian*aa.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Kenapa Dian* ngga repost ya? Aku jadi segan minta fotonya dan 
+                nge-tag. Ahh ngga jadi lah ya.
+            </p>
+            <p>
+                Senin ini insya Allah aku mau ke kampus sama kakakku karena 
+                bukukuu udah sampee tadi sore. Aku ngga di kasih bawa motor 
+                sendiri, ngeselin amat. Tapi ini pake motor kakakku sih, 
+                tapii aku kan bisa aja bawaa, ahhh ngeselin amat. Jadi ya 
+                gitu deh, sama kakakku ke kampusnya sekalian dia mau pasang 
+                karet behel.
+            </p>
+            <p>
+                Btw ini penggalan hidup after semhas, wkwkwk. Pantang pulang sebelum 
+                ACC. Tapi, kalo kataku waktu itu, pantang pulang sebelum jilid skripsi. 
+                Mau 4 hari lagi lebaran, mau hari meugang pun, kalo masih ada kesempatan 
+                harus terkejar jilid skripsi ituu wkwkwk. Yah walaupun akhirnya ngga 
+                dapet ACC juga sih, nasib nasib.
             </p>
         </div>
     </div>
