--- a/html/064. Jangann (10-07-2024)/jangan.html
+++ b/html/064. Jangann (10-07-2024)/jangan.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="apr.mp4" autoplay controls loop></video>
+            <video src="lst.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Jangann</h1>
@@ -52,6 +52,20 @@
             <p>
                 Tapii aku mau bikin kolase foto dulu bentar. For the last time 
                 yekann.
+            </p>
+            <p>
+                ....
+            </p>
+            <p><i><b>
+                He was the first man I cried over and he will be the last 
+                because I won't let anyone make me feel that love again.
+            </b></i></p>
+            <p>
+                ...
+            </p>
+            <p>
+                Karena ituu, aku jangan dihubungi lagii yaaa. Terima kasih. 
+                Hehehe.
             </p>
         </div>
     </div>
