--- a/html/064. Jangann (10-07-2024)/jangan.html
+++ b/html/064. Jangann (10-07-2024)/jangan.html
@@ -67,6 +67,19 @@
                 Karena ituu, aku jangan dihubungi lagii yaaa. Terima kasih. 
                 Hehehe.
             </p>
+            <p>
+                Ngomongin soal hubungin, aku mau hubungin dia juga sih kemaren. 
+                Wkwkwk. Jadi kan, aku mau nitip hdmi gitu ceritanya, pagi-pagi 
+                sebelum dia berangkat sidang, sekalian ngucapin selamat sidang. 
+                Tapii, ngga jadi. Karena hdmiku 'adam alias udah tiada, dahlah 
+                ngga terpakai juga skill IQ 298 ku ini, wkwkwk.
+            </p>
+            <p>
+                Btw, karena ini udah last banget nih, nanti aku mau cerita-cerita 
+                first impression kenal Zancok ini dan gimana penilaian aku ke 
+                dia waktu awal-awal dulu. Tapii, aku mau ngoding dulu, jadi 
+                nanti malam setelah beres projekku ini lah yaa.
+            </p>
         </div>
     </div>
 </body>
