--- a/html/066. Yeay (12-07-2024)/yeay.html
+++ b/html/066. Yeay (12-07-2024)/yeay.html
@@ -57,7 +57,11 @@
             </p>
             <p>
                 Laluu, rencanamu ke depan bagaimana nisa? Stay tune dan tunggu 
-                gebrakanku selanjutnya! Bismillah.
+                gebrakanku selanjutnya! Bismillah. Wkwkwkk.
+            </p>
+            <p>
+                Btw, aku lagi nunggu clienku ngecek webnya, ada yang salah ngga 
+                ya, jadi harap-harap cemas deh.
             </p>
         </div>
     </div>
