--- a/html/067. Life (13-07-2024)/life.html
+++ b/html/067. Life (13-07-2024)/life.html
@@ -50,7 +50,15 @@
                 ....
             </p>
             <p>
-
+                Btw, lagunya kacau amat wkwkwk. Aku liat template dari tiktok, terus 
+                kan ada link ke capcutnya, aku buatlah videoku. Setelah aku save dan 
+                aku liat videonya lagi, kan di bagian awal ada lirik dikit, ini kok 
+                liriknya aneh ya? Kok anu? Wkwkwk. Terus tadi aku liat full lirik, 
+                uwaduuuhhhh. Untung belum aku upload ke ig karena lagunya enak, 
+                ternyata liriknyaa, hmmm tidak bisa berkata-kata diriku.
+            </p>
+            <p>
+                Btw, disini ada 2 klip pas aku kkn, coba tebak yang mana? 
             </p>
         </div>
     </div>
