--- a/html/067. Life (13-07-2024)/life.html
+++ b/html/067. Life (13-07-2024)/life.html
@@ -60,6 +60,44 @@
             <p>
                 Btw, disini ada 2 klip pas aku kkn, coba tebak yang mana? 
             </p>
+            <p>
+                Jadi keinget masa-masa kkn deh. Jadi dulu kami tuh pagi dan sore pasti 
+                ngantri buat mandi, karena kamar mandinya ngga bisa dipake bareng. 
+                Bisa sih, paling aku sama fajri aja, karena kami mandinya pake kain 
+                'ijarah,' kalo anak-anak lain mandinya gitu aja polosan jadi ngga 
+                bisa gabung-gabung wkwkwk.
+            </p>
+            <p>
+                Jadi, karena setiap pagi kami pasti antri dan temen-temen yang lain 
+                bangunnya pas udah agak pagi, jam setengah 7-an gitu, aku sama fa*ri 
+                bangun subuh terus langsung mandi aja barengan. Kadang kami juga nyuci 
+                dulu paginya, bangun jam-jam 5-an terus nyuci dan mandi. Kadang aku 
+                bangun duluan terus bangunin fa*ri, atau kadang dia bangun duluan terus 
+                bangunin aku, pokoknya begitulah setiap pagi.
+            </p>
+            <p>
+                Jadi, ya aku sama faj*i pasti udah duluan siap dari temen-temenku yang 
+                lain. Yah begitulah, aku kalo lagi rapi dan gabut ya bikin tiktok, ini 
+                salah satunya pas pagi-pagi nungguin temen-temen siap dan satu lagi 
+                waktu kami ke sungai, wkwkwk.
+            </p>
+            <p>
+                Posko kami itu jauh dari posko cowok, jadi kami kalo pagi ketemunya 
+                langsung di balai desa gitu, (mesjid, meunasah, rumah geuchik, TK, 
+                puskesmasnya disatu tempat berdekatan) wkwkwk. Jadi ya gitu, pagi-pagi 
+                santuy dulu, kadang aku ngoding setelah mandi jam 6 pagi sendirian 
+                di depan rumah, keadaan masih gelap (lampu teras nyala) dan sampai 
+                ditanyain temenku kok berani di depan karena kondisi kami disitu takut 
+                sesuatu (kayak ada anu lah di rumah itu), tapi ya rasaku ngapain takut 
+                ngga sih. Kan ngga keliatan juga, abstrak. Tapi, kalo lagi berani aja 
+                sih, kalo pas lagi takut akunya juga ngga berani, wkwkwkw.
+            </p>
+            <p>
+                Abisnya kalo ngoding kan butuh ketenangan. Kalo di dalam di ruang tamu 
+                masih gelap dan matiin lampu karna yang lain tidur. Kalo di dapur ngga 
+                enak tempatnya. Jadi ya ke depan aja. Untung aku ngga di gangguin yak 
+                wkwkwk.
+            </p>
         </div>
     </div>
 </body>
