--- a/html/067. Life (13-07-2024)/life.html
+++ b/html/067. Life (13-07-2024)/life.html
@@ -98,6 +98,9 @@
                 enak tempatnya. Jadi ya ke depan aja. Untung aku ngga di gangguin yak 
                 wkwkwk.
             </p>
+            <p>
+                Tapi, ngomong-ngomong, emang ada hantu sift subuh?
+            </p>
         </div>
     </div>
 </body>
