--- a/html/068. Cewek (14-07-2024)/cwk.html
+++ b/html/068. Cewek (14-07-2024)/cwk.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="me_lf.mp4" autoplay controls loop></video>
+            <video src="cw.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Cewek</h1>
@@ -58,6 +58,11 @@
                 amat. Tapii, yang pasti aku jelek kalo pake cadar, karena mataku 
                 sipit, wkwkwk. Tapii, aku lebih suka pake cadar sih walaupun 
                 jelek, hahaha.
+            </p>
+            <p>
+                Funfact aku sebenernya biasa aja, tapi entah kenapa aku ngga pernah 
+                bosan melihat mukaku sendiri, wkwkwk. Mungkin aku terlalu self love 
+                yak, wkwkwk.
             </p>
         </div>
     </div>
