--- a/html/070. Dikit (16-07-2024)/dikit.html
+++ b/html/070. Dikit (16-07-2024)/dikit.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="gg.mp4" autoplay controls loop></video>
+            <video src="aanniissaaa.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Dikit</h1>
